# qvrholder

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/seed/qvrholder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  qvrholder.cpp
app/src/main/cpp/qvr/inc/: QVRCameraClient.h  QVRCameraDeviceParam.h  QVRServiceClient.h  QVRServiceClient.hpp  QVRServiceExternalCamera.h  QVRServiceExternalSensors.h  QVRServicePlugin.h  QXR.h  SXRServiceClient.hpp
app/src/main/cpp/qvr/inc/beta/: QVR3DR.h  QVRAnchors.h  QVRCameraStream.h
app/src/main/java/com/seed/qvrholder/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/seed/qvrholder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
